<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/themeColor">

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/loginTitle"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivLoginPhone"
            android:layout_width="25dp"
            android:layout_height="18dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/icon_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginTitle" />

        <TextView
            android:id="@+id/tvLoginPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/ivLoginPhone"
            app:layout_constraintLeft_toRightOf="@id/ivLoginPhone"
            app:layout_constraintTop_toTopOf="@id/ivLoginPhone" />

        <EditText
            android:id="@+id/etLoginPhone"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_bg_input"
            android:hint="请输入手机号"
            android:paddingLeft="20dp"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginPhone" />


        <ImageView
            android:id="@+id/ivLoginPassword"
            android:layout_width="25dp"
            android:layout_height="18dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/icon_password"
            app:layout_constraintLeft_toLeftOf="@id/ivLoginPhone"
            app:layout_constraintTop_toBottomOf="@id/etLoginPhone" />


        <TextView
            android:id="@+id/tvLoginPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/ivLoginPassword"
            app:layout_constraintLeft_toRightOf="@id/ivLoginPassword"
            app:layout_constraintTop_toTopOf="@id/ivLoginPassword" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_bg_input"
            android:paddingLeft="20dp"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginPassword" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/shape_bg_button_white"
            android:text="@string/login"
            android:textColor="@color/themeColor"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLoginPassword" />

        <Button
            android:id="@+id/btRegister"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_bg_button_white"
            android:text="@string/register"
            android:textColor="@color/themeColor"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btLogin" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>